<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST105_Feeder_e" Id="{b45e91b4-cfe2-481b-821b-cb090a7930a4}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ST105_Feeder_e :
(
    RESET := 0, // Reset

    INIT := 100, // Initialisieren 
    Init_home_table,
    Init_simu_home_table,
    Init_table_go_to_zero,
    Init_reset_search_index,
    Init_set_table_pos,
    Init_see_if_piece_there,
	Init_apply_feeder_offset, // If homing screw are not placed exactly at the same place, we fix that here

    READY := 999,  // READY to Start, Init Done 
    START := 1000, // Start Zyklisch
    check_if_feeding_necessary,
	wait_on_a_piece,
	load_piece,

    DONE := 8000,  // Ablauf beendet 
    ERROR := 9000, // Fehler 
    _max
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>